--- a/SP-MED/Frontend/css/style_login.css
+++ b/SP-MED/Frontend/css/style_login.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 .container {
     width: 1200px;
@@ -14,8 +15,10 @@
 
 header {
     background-color: #8DC9BE;
-    height: 130px;
-    border: 1px solid #DCDCDC;
+    height: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container_header {
@@ -27,7 +30,7 @@ header {
 
 header {
     color: #ffffff;
-    font-family: 'Questrial', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 50px;
 }
 
@@ -42,7 +45,37 @@ header {
     align-items: center;
 }
 
+.principal h1, label {
+    color: #645858;
+}
 
+.faça_login {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 27px;
+    height: 50px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.caixa_texto {
+    border: 0;
+    width: 480px;
+    border-bottom: 2px solid #9e9e9e;
+    outline: none;
+    transition: .2s ease-in-out;
+    box-sizing: border-box;
+}
+
+.opçoes_cadastro {
+    display: flex;
+    justify-content: center;
+}
+
+.imagem {
+    display: flex;
+    justify-content: center;
+}
 
 
 
