--- a/SP-MED/Frontend/css/style_login.css
+++ b/SP-MED/Frontend/css/style_login.css
@@ -18,13 +18,13 @@ header {
     height: 140px;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .container_header {
     height: 56px;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 1%;
 }
 
@@ -39,7 +39,7 @@ header {
 
 
 .principal {
-    margin: 120px 0;
+    margin: 70px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,7 +52,7 @@ header {
 .faça_login {
     font-family: 'Montserrat', sans-serif;
     font-size: 27px;
-    height: 50px;
+    height: 40px;
     margin-bottom: 40px;
     display: flex;
     justify-content: center;
@@ -60,16 +60,69 @@ header {
 
 .caixa_texto {
     border: 0;
-    width: 480px;
+    width: 530px;
     border-bottom: 2px solid #9e9e9e;
     outline: none;
     transition: .2s ease-in-out;
     box-sizing: border-box;
 }
 
+.formulario_e_s {
+    font-size: 40px;
+    height: 100px;
+    color: #9e9e9e;
+} 
+
 .opçoes_cadastro {
     display: flex;
     justify-content: center;
+}
+
+
+.lembre {
+    margin-top: 10px;
+    height: 30px;
+}
+
+.lembre button {
+    background-color: #ffffff;
+    border-radius: 3px;
+    border-width: 1px;
+    height: 13px;
+    width: 13px;
+}
+
+.cadastrar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+}
+
+.cadastrar button {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    height: 50px;
+    width: 180px;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #8DC9BE;
+    border: none;
+    border-radius: 48px;    
+}
+
+.ou {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ou hr {
+    width: 200px;
+}
+
+.opcoes_acesso {
+    margin-top: 45px;
 }
 
 .imagem {
@@ -77,6 +130,9 @@ header {
     justify-content: center;
 }
 
+.imagem2 {
+    margin-top: 20px;
+}
 
 
 /*Footer*/
